--- a/testSpaceXApp/testSpaceXApp/Resources/Info.plist
+++ b/testSpaceXApp/testSpaceXApp/Resources/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>LabGrotesque-Bold.ttf</string>
+		<string>LabGrotesque-Medium.ttf</string>
+		<string>LabGrotesque-Regular.ttf</string>
+		<string>LabGrotesque-Thin.ttf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
